--- a/src/tokens.css
+++ b/src/tokens.css
@@ -1,6 +1,6 @@
 :root {
   /* Colors */
-  --color-brand: #c4baff;
+  --color-brand: #BAFFC9;
   --color-border-strong: #000000;
   --color-black: #000000;
   --color-medium-gray: #6d6e6d;
